# demo

./: .travis.yml  README.md  setup.cfg  setup.py
owm_api_tests/common/: api_test.py
tests/: README.md  template
tests/current/: test_city_name.py  test_zip_code.py
