[metadata]
name = owm_api_tests
author = Ken Chou
author-email = kenchou@outlook.com
summary = Sample
description-file = README.md
home-page = https://github.com/ken-chou/finn-ai-demo
classifier =
    Operating System :: OS Independent
    Programming Language :: Python
[files]
packages =
    owm-api-tests